@@ -208,13 +208,14 @@ const char* const SPVM_OPCODE_C_CODE_NAMES[] = {
   "INC_SHORT",
   "INC_INT",
   "INC_LONG",
+  "INC_FLOAT",
+  "INC_DOUBLE",
   "BOOL_INT",
   "BOOL_LONG",
   "BOOL_FLOAT",
   "BOOL_DOUBLE",
   "BOOL_OBJECT",
   "LOAD_UNDEF",
-  "MOVE",
   "NEW_OBJECT",
   "NEW_STRING",
   "NEW_OBJECT_ARRAY",
