@@ -208,13 +208,14 @@ enum {
   SPVM_OPCODE_C_CODE_INC_SHORT,
   SPVM_OPCODE_C_CODE_INC_INT,
   SPVM_OPCODE_C_CODE_INC_LONG,
+  SPVM_OPCODE_C_CODE_INC_FLOAT,
+  SPVM_OPCODE_C_CODE_INC_DOUBLE,
   SPVM_OPCODE_C_CODE_BOOL_INT,
   SPVM_OPCODE_C_CODE_BOOL_LONG,
   SPVM_OPCODE_C_CODE_BOOL_FLOAT,
   SPVM_OPCODE_C_CODE_BOOL_DOUBLE,
   SPVM_OPCODE_C_CODE_BOOL_OBJECT,
   SPVM_OPCODE_C_CODE_LOAD_UNDEF,
-  SPVM_OPCODE_C_CODE_MOVE,
   SPVM_OPCODE_C_CODE_NEW_OBJECT,
   SPVM_OPCODE_C_CODE_NEW_STRING,
   SPVM_OPCODE_C_CODE_NEW_OBJECT_ARRAY,
