@@ -103,11 +103,16 @@ package TestCase {
     my $value_short = (short)0;
     my $value_int = 0;
     my $value_long = 0L;
+    my $value_float = 0.25f;
+    my $value_double = 0.25;
     
     my $value_byte2 = ++$value_byte;
     my $value_short2 = ++$value_short;
     my $value_int2 = ++$value_int;
     my $value_long2 = ++$value_long;
+    my $value_float2 = ++$value_float;
+    my $value_double2 = ++$value_double;
+    
     
     if ($value_byte == 1) {
       if ($value_byte2 == 1) {
@@ -117,7 +122,15 @@ package TestCase {
               if ($value_int2 == 1) {
                 if ($value_long == 1L) {
                   if ($value_long2 == 1L) {
-                    return 1;
+                    if ($value_float == 1.25f) {
+                      if ($value_float2 == 1.25f) {
+                        if ($value_double == 1.25) {
+                          if ($value_double2 = 1.25) {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               }
@@ -133,11 +146,15 @@ package TestCase {
     my $value_short = (short)0;
     my $value_int = 0;
     my $value_long = 0L;
+    my $value_float = 0.25f;
+    my $value_double = 0.25;
     
     my $value_byte2 = $value_byte++;
     my $value_short2 = $value_short++;
     my $value_int2 = $value_int++;
     my $value_long2 = $value_long++;
+    my $value_float2 = $value_float++;
+    my $value_double2 = $value_double++;
     
     if ($value_byte == 1) {
       if ($value_byte2 == 0) {
@@ -147,7 +164,15 @@ package TestCase {
               if ($value_int2 == 0) {
                 if ($value_long == 1L) {
                   if ($value_long2 == 0L) {
-                    return 1;
+                    if ($value_float == 1.25f) {
+                      if ($value_float2 = 0.25f) {
+                        if ($value_double == 1.25) {
+                          if ($value_double2 == 0.25) {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               }
@@ -163,11 +188,15 @@ package TestCase {
     my $value_short = (short)0;
     my $value_int = 0;
     my $value_long = 0L;
+    my $value_float = 0;
+    my $value_double = 0L;
     
     my $value_byte2 = --$value_byte;
     my $value_short2 = --$value_short;
     my $value_int2 = --$value_int;
     my $value_long2 = --$value_long;
+    my $value_float2 = --$value_float;
+    my $value_double2 = --$value_double;
     
     if ($value_byte == -1) {
       if ($value_byte2 == -1) {
@@ -177,7 +206,15 @@ package TestCase {
               if ($value_int2 == -1) {
                 if ($value_long == -1L) {
                   if ($value_long2 == -1L) {
-                    return 1;
+                    if ($value_float == -1.0f) {
+                      if ($value_float2 == -1.0f) {
+                        if ($value_double == -1.0) {
+                          if ($value_double2 == -1.0) {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               }
@@ -193,11 +230,15 @@ package TestCase {
     my $value_short = (short)0;
     my $value_int = 0;
     my $value_long = 0L;
+    my $value_float = 1.25f;
+    my $value_double = 1.25;
     
     my $value_byte2 = $value_byte--;
     my $value_short2 = $value_short--;
     my $value_int2 = $value_int--;
     my $value_long2 = $value_long--;
+    my $value_float2 = $value_float--;
+    my $value_double2 = $value_double--;
     
     if ($value_byte == -1) {
       if ($value_byte2 == 0) {
@@ -207,7 +248,15 @@ package TestCase {
               if ($value_int2 == 0) {
                 if ($value_long == -1L) {
                   if ($value_long2 == 0L) {
-                    return 1;
+                    if ($value_float == 0.25f) {
+                      if ($value_float2 == 1.25f) {
+                        if ($value_double == 0.25) {
+                          if ($value_double2 == 1.25) {
+                            return 1;
+                          }
+                        }
+                      }
+                    }
                   }
                 }
               }
