@@ -26,6 +26,8 @@
   - add automatically type convertion to >> operator
   - add automatically type convertion to >>> operator
   - limit <<, >>, >>> right value
+  - fix increment, decrelement assignment bug
+  - implement float, double increment
 0.0309 2018-02-10
   - jit code is called from virtual machine
   - separate tests to succeed tests at less memory environment
